--- a/UserService/app/bin/main/application.properties
+++ b/UserService/app/bin/main/application.properties
@@ -1,10 +1,7 @@
-spring.kafka.bootstrap-servers=${KAFKA_HOST:192.168.84.130}:${KAFKA_PORT:9092}
-spring.kafka.consumer.properties.max.poll.interval.ms=300000
-spring.kafka.consumer.properties.session.timeout.ms=45000
-spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.bootstrap-servers=192.168.84.130:9092
 spring.kafka.consumer.group-id=userinfo-consumer-group
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer= com.microservice.userservice.deserializer.UserInfoDeserializer
+spring.kafka.consumer.value-deserializer= com.microservice.userservice.deserializer.UserInfoDesrializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.topic-json.name=user_service
 spring.kafka.consumer.properties.spring.json.type.mapping=auth:com.microservice.userservice.entities.UserInfoDto
@@ -12,16 +9,10 @@ spring.kafka.consumer.properties.spring.json.type.mapping=auth:com.microservice.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.84.130}:${MYSQL_PORT:3306}/${MYSQL_DB:userservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=PASSWORD
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 server.port=9810
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=10
-
 
 logging.level.org.springframework.security=DEBUG
-logging.level.org.apache.kafka=DEBUG
-logging.level.org.springframework.kafka=DEBUG
