--- a/ExpenseService/app/build.gradle
+++ b/ExpenseService/app/build.gradle
@@ -8,6 +8,9 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'java'
+	id 'org.springframework.boot' version '3.2.5'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
 repositories {
@@ -18,19 +21,37 @@ repositories {
 dependencies {
     // Use JUnit test framework.
     testImplementation libs.junit
-
+    implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+	implementation 'org.springframework.boot:spring-boot-starter-parent:2.6.2'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	
     // This dependency is used by the application.
     implementation libs.guava
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+
     toolchain {
-        languageVersion = JavaLanguageVersion.of(22)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'org.example.ServiceApplication'
 }
+
+tasks.withType(Test) {
+    enabled = false
+}
+
