--- a/ExpenseService/app/src/main/resources/application.properties
+++ b/ExpenseService/app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.bootstrap-servers=${KAFKA_HOST:192.168.84.130}:${KAFKA_PORT:9092}
+spring.kafka.bootstrap-servers=${KAFKA_HOST:kafka}:${KAFKA_PORT:9092}
 spring.kafka.consumer.group-id=expense-info-consumer-group
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= com.expense.service.consumer.ExpenseDeserializer
@@ -7,7 +7,7 @@ spring.kafka.topic-json.name=expense_service
 spring.kafka.consumer.properties.spring.json.type.mapping=com.expense.service.dto.ExpenseDto
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.84.130}:${MYSQL_PORT:3306}/${MYSQL_DB:expenseservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql}:${MYSQL_PORT:3306}/${MYSQL_DB:expenseservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 
